package proxy.model;

public class Service implements ServiceInterface {
    public void operation1() {
        System.out.println("Service operation1 run successfully");
    }
}
