package proxy.model;

public interface ServiceInterface {
    void operation1();
}
